@@ -109,32 +109,19 @@
                     </execution>
                 </executions>
             </plugin>
-             <plugin>
-                 <groupId>org.jetbrains.kotlin</groupId>
-                 <artifactId>kotlin-maven-plugin</artifactId>
-                 <version>${kotlin.version}</version>
-                 <executions>
-                     <execution>
-                         <id>test-compile</id>
-                         <phase>test-compile</phase>
-                         <goals>
-                             <goal>test-compile</goal>
-                         </goals>
-                         <configuration>
-                             <sourceDirs>
-                                 <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                             </sourceDirs>
-                         </configuration>
-                     </execution>
-                 </executions>
-             </plugin>
-             <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-surefire-plugin</artifactId>
-                 <configuration>
-                     <argLine>-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage=false -Xshare:off</argLine>
-                 </configuration>
-             </plugin>
+
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                      <argLine></argLine>
+                      <forkCount>0</forkCount>
+                      <excludes>
+                          <exclude>**/*IT.java</exclude>
+                          <exclude>**/*IT.kt</exclude>
+                      </excludes>
+                  </configuration>
+              </plugin>
         </plugins>
     </build>
 </project>
